--- a/about.html
+++ b/about.html
@@ -17,13 +17,14 @@
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
             <p class="apresentacao__conteudo__texto">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In blandit, erat a rhoncus suscipit, sapien sapien convallis ligula, id fringilla ante nibh et nibh. Donec euismod luctus tempor. Praesent sollicitudin dui magna, sed semper nunc mollis id. Maecenas venenatis, nibh et auctor sagittis, est purus placerat lorem, at viverra leo justo vitae metus. Aliquam arcu metus, lobortis nec justo in, imperdiet malesuada velit.
+                Olá! Meu nome é Vitor, sou desenvolvedor front-end com especialidade em HTML, CSS e JavaScript e React. Tenho experiência no desenvolvimento de páginas simples da internet, e meu foco é o desenvolvimento de aplicações com responsividade e acessibilidade. Também me interesso em desenvolver aplicações com integração com inteligência artificial, e em back-end. Acredito no potencial transformador da tecnologia, e tenho a iniciativa de procurar consumir e produzir conteúdo sobre tecnologia, seus impactos, e principalmente sua relações com outras áreas do conhecimento.
             </p>
             <p class="apresentacao__conteudo__texto">
-                Fusce vehicula bibendum justo in fringilla. In viverra lacinia neque, eget vulputate turpis consectetur nec. Integer in odio id enim consectetur facilisis. Etiam cursus in turpis ac semper. Nulla eu facilisis nisi. Aenean hendrerit risus justo, at euismod mi pharetra sed. Duis egestas scelerisque nisl ut elementum. Nam ultricies lacinia mi, a vehicula urna tristique id. Mauris commodo id nisl ac consequat. Nunc egestas molestie dolor, sed pretium sem tincidunt in. In tempus efficitur orci, quis elementum ex auctor ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In feugiat varius risus, vitae porttitor enim maximus sed.
+                Antes de transitar para a área de tecnologia, trabalhei na área de tradução e estagiei na área de direito durante minha formação na UFPR. Também tenho interesse em escrita e em linguagem, e escrevo conteúdo na plataforma Substack sobre filosofia, psicanálise, tecnologia e a condição do pensamento humano. No momento, estou aprendendo muita coisa sobre tecnologia, programação, segurança cibernética, QA e jogos, que são as oportunidades que se apresentaram de forma mais evidente a mim, e são as áreas em que mais me interessei. Este portfólio deve ser constantemente alterado para abarcar mais educação e experiência.
+                Caso se interesse por literatura e ensaios existenciais, convido você a visitar minha publicação no <a class="linkSubstack" href="https://vitorberghauser.substack.com/">Substack</a>.
             </p>
         </section>
-        <img class="apresentacao__imagem" src="./assets/Imagem.png" alt="Foto da Joana Santos programando">
+        <img class="apresentacao__imagem" src="./assets/imagemRosto.png" alt="Foto da Joana Santos programando">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Vitor Berghauser</p>
