--- a/index.html
+++ b/index.html
@@ -21,29 +21,26 @@
                 <strong class="titulo-destaque">com um Front-end de qualidade!</strong>
             </h1>
             <p class="apresentacao__conteudo__texto">
-                Olá! Sou Joana Santos, desenvolvedora 
-                Front-end com especialidade em React, HTML e
-                CSS. Ajudo pequenos negócios e designers a 
-                colocarem em prática boas ideias. Vamos 
-                conversar?
+                Olá! Sou Vitor Berghauser, desenvolvedor 
+                Front-end com especialidade em HTML e CSS, Javascript e React. Ajudo pequenos negócios e designers a colocarem em prática ideias bacanas. Vamos conversar?
             </p>
             <div class="apresentacao__links">
-                <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
-                <a class="apresentacao__links__link" href="https://github.com/guilhermeonrails">
-                    <img src="./assets/github.png">
+                <h2 class="apresentacao__links__subtitulo">Acesse as minhas redes</h2>
+                <a class="apresentacao__links__link" href="https://github.com/Capelanich">
+                    <img class="icone" src="./assets/github-icon.png">
                     GitHub
                 </a>
-                <a class= "apresentacao__links__link" href="">
-                    <img src="./assets/linkedin.png">
+                <a class= "apresentacao__links__link" href="https://www.linkedin.com/in/berghauservitor230496320/">
+                    <img class="icone" src="./assets/linkedin-icon.png">
                     LinkedIn
                 </a>
-                <a class="apresentacao__links__link" href="https://instagram.com/rafaballerini">
-                    <img src="./assets/instagram.png">
-                    Instagram
+                <a class="apresentacao__links__link" href="https://bsky.app/profile/vberghauser.bsky.social">
+                    <img class="icone" src="./assets/bluesky-icon.png">
+                    BlueSky
                 </a>
             </div>
         </section>
-        <img class="apresentacao__imagem" src="./assets/Imagem.png" alt="Foto da Joana Santos programando">
+        <img class="apresentacao__imagem" src="./assets/ImagemRosto.png" alt="Foto da Joana Santos programando">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Vitor Berghauser</p>
