--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
                 Caso se interesse por literatura e ensaios existenciais, convido você a visitar minha publicação no <a class="linkSubstack" href="https://vitorberghauser.substack.com/">Substack</a>.
             </p>
         </section>
-        <img class="apresentacao__imagem" src="./assets/imagemRosto.png" alt="Foto da Joana Santos programando">
+        <img class="apresentacao__imagem" src="./assets/imagemRosto.png" alt="Desenho de Vitor Berghauser ao ar livre">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Vitor Berghauser</p>
