--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </a>
             </div>
         </section>
-        <img class="apresentacao__imagem" src="./assets/ImagemRosto.png" alt="Desenho de Vitor Berghauser ao ar livre">
+        <img class="apresentacao__imagem" src="./assets/imagemRosto.png" alt="Desenho de Vitor Berghauser ao ar livre">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Vitor Berghauser</p>
